--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ logs/debug_log_2023-11-24.txt
 temp/favicon.ico
 logs/debug_log_2023-11-24.txt
 logs/debug_log_2023-11-24.txt
+get-anime.py
+logs/debug_log_2023-11-24.txt
+logs/debug_log_2023-11-26.txt.2023-11-26
+logs/debug_log_2023-11-25.txt.2023-11-25
