--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
 *.m3u
 *.png
 logs/*
-*.json
+utils/*.json
 
 temp/favicon.ico
 utils/__pycache__/*
 __pycache__/*
-gui/__pycache__/__init__.cpython-312.pyc
-gui/__pycache__/app.cpython-312.pyc
+gui/__pycache__/*
+.idea/*
+torrents/*
+playlists/*
+playlists/A.I.C.O.
+.idea/get-anime.iml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/get-anime.iml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
