--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,11 @@
 *.m3u
 *.png
-logs/*.txt
 *.json
 
-logs/debug_log_2023-11-24.txt
-temp/favicon.ico
-logs/debug_log_2023-11-24.txt
-logs/debug_log_2023-11-24.txt
-get-anime.py
-logs/debug_log_2023-11-24.txt
-logs/debug_log_2023-11-26.txt.2023-11-26
-logs/debug_log_2023-11-25.txt.2023-11-25
-logs/debug_log_2023-11-27.txt.2023-11-27
+logs/*
+temp/*
 poster_cache.txt
-helper/poster_utils.py
-helper/__pycache__/poster_utils.cpython-312.pyc
+helper/__pycache__/*
 legacy-1.8.0/config.ini
 legacy-1.8.0/LICENSE
 legacy-1.8.0/README.md
@@ -33,12 +24,9 @@ logs/debug_log_2023-12-07.txt.2023-12-07
 logs/debug_log_2023-12-08.txt.2023-12-08
 logs/debug_log_2023-12-09.txt.2023-12-09
 shared/get_data.py
-utils/config.ini
-utils/file_config.py
-utils/file_playlist.py
-utils/file_utils.py
-utils/logging.py
-utils/__pycache__/file_config.cpython-312.pyc
-utils/__pycache__/file_playlist.cpython-312.pyc
-utils/__pycache__/file_utils.cpython-312.pyc
-utils/__pycache__/logging.cpython-312.pyc
+utils/__pycache__/*
+playlists/A.I.C.O.
+playlists/*
+torrents/*
+core/__pycache__/*
+.idea/*
