--- a/logging.conf
+++ b/logging.conf
@@ -7,7 +7,7 @@ keys=root,AnimePlayerApp
 keys=consoleHandler,fileHandler
 
 [formatters]
-keys=defaultFormatter
+keys=consoleFormatter,defaultFormatter
 
 [logger_root]
 level=NOTSET
@@ -22,7 +22,7 @@ propagate=0
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
-formatter=defaultFormatter
+formatter=consoleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
@@ -31,6 +31,10 @@ level=DEBUG
 formatter=defaultFormatter
 args=('logs/debug_log.txt', 'midnight', 1, 7, 'utf-8')
 
+[formatter_consoleFormatter]
+format=%(asctime)s | %(levelname)s | %(name)s.%(funcName)s | %(message)s
+datefmt=%Y-%m-%d %H:%M:%S
+
 [formatter_defaultFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-datefmt=
+format=%(asctime)s | %(levelname)s | %(process)d | %(thread)s | %(name)s.%(funcName)s | %(message)s
+datefmt=%Y-%m-%d %H:%M:%S
