--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ managers/__pycache__/torrent_manager.cpython-312.pyc
 ui/__pycache__/__init__.cpython-312.pyc
 ui/__pycache__/ui_dearpygui.cpython-312.pyc
 get_anime.zip
+345435435.db
+anime_player.db
