--- a/logging.conf
+++ b/logging.conf
@@ -21,7 +21,7 @@ propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=consoleFormatter
 args=(sys.stdout,)
 
