--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,7 +1,7 @@
 # logging.conf
 
 [loggers]
-keys=root,AnimePlayerApp
+keys=root,AnimePlayerApp1
 
 [handlers]
 keys=consoleHandler,fileHandler
@@ -13,15 +13,15 @@ keys=consoleFormatter,defaultFormatter
 level=NOTSET
 handlers=consoleHandler, fileHandler
 
-[logger_AnimePlayerApp]
+[logger_AnimePlayerApp1]
 level=DEBUG
 handlers=consoleHandler,fileHandler
-qualname=AnimePlayerApp
+qualname=AnimePlayerApp1
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=INFO
+level=DEBUG
 formatter=consoleFormatter
 args=(sys.stdout,)
 
