--- a/config/config.ini
+++ b/config/config.ini
@@ -2,6 +2,9 @@
 base_url = anilibria.tv
 api_version = v3
 stream_video_url = cache.libria.fun
+titles_batch_size = 2
+current_offset = 0
+num_columns = 2
 mac_video_player_path = /Applications/VLC.app/Contents/MacOS/VLC
 mac_torrent_client_path = /Applications/Transmission.app/Contents/MacOS/Transmission
 win_video_player_path = C:\Program Files\VideoLAN\VLC\vlc.exe
