--- a/config/config.ini
+++ b/config/config.ini
@@ -2,6 +2,7 @@
 base_url = anilibria.tv
 api_version = v3
 stream_video_url = cache.libria.fun
+user_id = 42
 titles_batch_size = 2
 current_offset = 0
 num_columns = 2
