--- a/config/config.ini
+++ b/config/config.ini
@@ -4,6 +4,7 @@ api_version = v3
 stream_video_url = cache.libria.fun
 user_id = 42
 titles_batch_size = 2
+titles_list_batch_size = 12
 current_offset = 0
 num_columns = 2
 mac_video_player_path = /Applications/VLC.app/Contents/MacOS/VLC
