--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ requests>=2.25.1
 Pillow>=8.1.0
 SQLAlchemy~=2.0.36
 pydantic
-aiohttp
+aiohttp>=3.10.11
 PyQt5~=5.15.11
 typing_extensions~=4.12.2
 greenlet~=3.1.1
 attrs~=24.2.0
 pyinstaller~=5.13.2
 jinja2
+qrcode
+tqdm
