--- a/config/config.ini
+++ b/config/config.ini
@@ -7,6 +7,7 @@ titles_batch_size = 2
 titles_list_batch_size = 12
 current_offset = 0
 num_columns = 2
+use_libvlc = true
 mac_video_player_path = /Applications/VLC.app/Contents/MacOS/VLC
 mac_torrent_client_path = /Applications/Transmission.app/Contents/MacOS/Transmission
 win_video_player_path = C:\Program Files\VideoLAN\VLC\vlc.exe
