--- a/config/logging.conf
+++ b/config/logging.conf
@@ -14,20 +14,20 @@ level=NOTSET
 handlers=consoleHandler, fileHandler
 
 [logger_AnimePlayerApp1]
-level=DEBUG
+level=INFO
 handlers=consoleHandler,fileHandler
 qualname=AnimePlayerApp1
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=consoleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
 class=logging.handlers.TimedRotatingFileHandler
-level=DEBUG
+level=INFO
 formatter=defaultFormatter
 args=('logs/debug_log.txt', 'midnight', 1, 5, 'utf-8')
 
