--- a/config/logging.conf
+++ b/config/logging.conf
@@ -14,7 +14,7 @@ level=NOTSET
 handlers=consoleHandler, fileHandler
 
 [logger_AnimePlayerApp1]
-level=INFO
+level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=AnimePlayerApp1
 propagate=0
@@ -27,7 +27,7 @@ args=(sys.stdout,)
 
 [handler_fileHandler]
 class=logging.handlers.TimedRotatingFileHandler
-level=INFO
+level=DEBUG
 formatter=defaultFormatter
 args=('logs/debug_log.txt', 'midnight', 1, 5, 'utf-8')
 
