--- a/config/logging.conf
+++ b/config/logging.conf
@@ -26,10 +26,10 @@ formatter=consoleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
-class=logging.handlers.TimedRotatingFileHandler
+class=utils.logging_handlers.CustomTimedRotatingFileHandler
 level=DEBUG
 formatter=defaultFormatter
-args=('logs/debug_log.txt', 'midnight', 1, 5, 'utf-8')
+args=('debug_log.txt', 'midnight', 1, 10485760, 5, 'utf-8')
 
 [formatter_consoleFormatter]
 format=%(asctime)s | %(levelname)s | %(name)s.%(funcName)s | %(message)s
