--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,13 @@ typing_extensions~=4.12.2
 greenlet~=3.1.1
 attrs~=24.2.0
 pyinstaller~=5.13.2
-jinja2
-qrcode
-tqdm
-pyzbar
+jinja2~=3.1.5
+qrcode~=8.0
+tqdm~=4.67.1
+pyzbar~=0.1.9
 requests_toolbelt
-python-dotenv
-pytest
+python-dotenv~=1.0.1
+pytest~=8.3.4
 python-vlc
+pyzipper~=0.3.6
+beautifulsoup4~=4.13.3
