--- a/config/config.ini
+++ b/config/config.ini
@@ -3,6 +3,7 @@ base_url = anilibria.tv
 api_version = v3
 stream_video_url = cache.libria.fun
 user_id = 42
+default_rating_name = CMERS
 titles_batch_size = 2
 titles_list_batch_size = 12
 current_offset = 0
