--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [Settings]
-base_url = anilibria.tv
-api_version = v3
+base_url = anilibria.top
+api_version = v1
 stream_video_url = cache.libria.fun
 user_id = 42
 default_rating_name = CMERS
