--- a/config/config.ini
+++ b/config/config.ini
@@ -15,4 +15,7 @@ win_video_player_path = C:\Program Files\VideoLAN\VLC\vlc.exe
 win_torrent_client_path = C:\Program Files\Transmission\transmission-qt.exe
 [Logging]
 log_level = DEBUG
+[System]
+USE_GIT_VERSION=1
+
 
