--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,6 @@
 [Settings]
 base_url = anilibria.top
+base_am_url = amedia.online
 api_version = v1
 stream_video_url = cache.libria.fun
 user_id = 42
