--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 base_url = anilibria.top
 base_am_url = amedia.online
-headless = true
+headless = false
 api_version = v1
 stream_video_url = cache.libria.fun
 user_id = 42
