--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ SQLAlchemy~=2.0.44
 greenlet~=3.2.4
 jinja2~=3.1.6
 python-vlc~=3.0.21203
-PyQt5~=5.15.11
+PyQt6
 Pillow>=12.0.0
 pyinstaller~=6.17.0
 pydantic~=2.12.5
