--- a/config/config.ini
+++ b/config/config.ini
@@ -1,14 +1,14 @@
 [Settings]
-base_url = anilibria.top
+base_al_url = anilibria.top
+al_api_version = v1
 base_am_url = amedia.online
-api_version = v1
-user_id = 42
+use_libvlc = true
 default_rating_name = CMERS
+user_id = 42
 titles_batch_size = 2
 titles_list_batch_size = 12
 current_offset = 0
 num_columns = 2
-use_libvlc = true
 mac_video_player_path = /Applications/VLC.app/Contents/MacOS/VLC
 mac_torrent_client_path = /Applications/Transmission.app/Contents/MacOS/Transmission
 win_video_player_path = C:\Program Files\VideoLAN\VLC\vlc.exe
