--- a/config/config.ini
+++ b/config/config.ini
@@ -17,7 +17,7 @@ win_torrent_client_path = C:\Program Files\Transmission\transmission-qt.exe
 log_level = DEBUG
 [System]
 USE_GIT_VERSION=1
-[network]
+[Network]
 proxy_enabled = false
-# proxy_url = http://127.0.0.1:8080
+proxy_url = http://192.168.0.100:8866
 
