--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [Settings]
-base_al_url = anilibria.top
+base_al_url = aniliberty.top
 al_api_version = v1
-base_am_url = amedia.online
+base_am_url = amd.online
 use_libvlc = true
 default_rating_name = CMERS
 user_id = 42
