--- a/app/qt_browser/config/config.ini
+++ b/app/qt_browser/config/config.ini
@@ -1,6 +1,5 @@
 [Settings]
-base_am_url = amedia.online
-win_video_player_path = C:\Program Files\VideoLAN\VLC\vlc.exe
+base_am_url = amd.online
 [Logging]
 log_level = DEBUG
 [Network]
