--- a/config/config.ini
+++ b/config/config.ini
@@ -13,6 +13,9 @@ mac_video_player_path = /Applications/VLC.app/Contents/MacOS/VLC
 mac_torrent_client_path = /Applications/Transmission.app/Contents/MacOS/Transmission
 win_video_player_path = C:\Program Files\VideoLAN\VLC\vlc.exe
 win_torrent_client_path = C:\Program Files\Transmission\transmission-qt.exe
+[VlcPlayer]
+log_enable = true
+verbose_level = 2
 [Network]
 proxy_enabled = false
 proxy_url = http://192.168.0.100:8866
