--- a/config/config.ini
+++ b/config/config.ini
@@ -14,7 +14,7 @@ mac_torrent_client_path = /Applications/Transmission.app/Contents/MacOS/Transmis
 win_video_player_path = C:\Program Files\VideoLAN\VLC\vlc.exe
 win_torrent_client_path = C:\Program Files\Transmission\transmission-qt.exe
 [VlcPlayer]
-log_enable = true
+log_enabled = false
 verbose_level = 2
 [Network]
 proxy_enabled = false
