--- a/config/config.ini
+++ b/config/config.ini
@@ -2,7 +2,8 @@
 base_al_url = aniliberty.top
 al_api_version = v1
 base_am_url = amd.online
-use_libvlc = true
+use_libvlc = false
+use_mpv_player = true
 default_rating_name = CMERS
 user_id = 42
 titles_batch_size = 2
@@ -16,6 +17,10 @@ win_torrent_client_path = C:\Program Files\Transmission\transmission-qt.exe
 [VlcPlayer]
 log_enabled = false
 verbose_level = 2
+[MpvPlayer]
+executable_name = mpv_player.exe
+log_enabled = true
+verbose_level = info
 [Network]
 proxy_enabled = false
 proxy_url = http://192.168.0.100:8866
