--- a/config/config.ini
+++ b/config/config.ini
@@ -2,8 +2,6 @@
 base_al_url = aniliberty.top
 al_api_version = v1
 base_am_url = amd.online
-use_libvlc = false
-use_mpv_player = true
 default_rating_name = CMERS
 user_id = 42
 titles_batch_size = 2
@@ -14,6 +12,8 @@ mac_video_player_path = /Applications/VLC.app/Contents/MacOS/VLC
 mac_torrent_client_path = /Applications/Transmission.app/Contents/MacOS/Transmission
 win_video_player_path = C:\Program Files\VideoLAN\VLC\vlc.exe
 win_torrent_client_path = C:\Program Files\Transmission\transmission-qt.exe
+use_libvlc = true
+use_mpv_player = false
 [VlcPlayer]
 log_enabled = false
 verbose_level = 2
@@ -22,7 +22,7 @@ executable_name = mpv_player.exe
 log_enabled = true
 verbose_level = info
 [Network]
-proxy_enabled = false
+proxy_enabled = true
 proxy_url = http://192.168.0.100:8866
 [Logging]
 log_level = DEBUG
