--- a/config/logging.conf
+++ b/config/logging.conf
@@ -21,12 +21,12 @@ propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=INFO
+level=DEBUG
 formatter=consoleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
-class=utils.logging_handlers.CustomTimedRotatingFileHandler
+class=utils.logging.logging_handlers.CustomTimedRotatingFileHandler
 level=DEBUG
 formatter=defaultFormatter
 args=('debug_log.txt', 'midnight', 1, 10485760, 5, 'utf-8')
