--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ greenlet~=3.2.4
 jinja2~=3.1.6
 python-vlc~=3.0.21203
 PyQt5~=5.15.11
+PyQtWebEngine~=5.15.7
 Pillow>=12.0.0
 pyinstaller~=6.17.0
 pydantic~=2.12.5
@@ -12,6 +13,8 @@ requests>=2.32.3
 aiohttp>=3.13.2
 httpx~=0.28.1
 beautifulsoup4~=4.14.3
+python-vlc~=3.0.21203
+python-mpv~=1.0.8
 
 # Not using now
 pytest~=8.3.5
